# explainable-chess-engine

./: .pre-commit-config.yaml  Analysis_training.ipynb  Dockerfile  README.md  Training.ipynb  agents.py  dataset.py  games.py  pyproject.toml  train_functions.py  utils.py
api/: dl_agents.py
demos/: app.py  beam_search.py  demo_utils.py  packages.txt
notebooks/: agent.ipynb  dataset.ipynb  train.ipynb
profile/: profile_dataset.py
profile/profile_data/: Morphy.pgn
profile_package/: profile_dataset.py
profile_package/profile_data/: Morphy.pgn
profiling/: profile.py
scripts/: deploy_space.py  write_to_parquet.py
src/agents/: base_agent.py  dl_agent.py  policies.py  stockfish_agent.py  viz_utils.py
src/data/: base_dataset.py  data_utils.py  dataset.py  parquet_dataset.py  parquet_db.py  pgn_dataset.py
src/engine/: games.py
src/engine/agents/: base_agent.py  dl_agent.py  policies.py  stockfish_agent.py  viz_utils.py
src/models/: __init__.py  model_space.py  multi_input_attention.py  multi_input_conv.py  multi_input_feedforward.py  simple_feed_forward.py
src/train/: base_trainer.py  distill.py  reinforcement.py  train.py  train_utils.py  viz_utils.py
studies/: beam_benchmark.py
studies/profile_dataloading/: pyarrow_multiple_files.py  pyarrow_single_file.py
studies/profile_package/profile_data/: Najdorf.pgn
test/: mock_torch_model.py  test_agents.py  test_base_trainer.py  test_data_utils.py  test_dataset.py  test_datasets.py  test_distill.py  test_games.py  test_parquet_dataset.py  test_parquet_db.py  test_pgn_dataset.py  test_policies.py  test_train_utils.py  test_utils.py
test/test_data/: Morphy.pgn  Najdorf.pgn  Tal.pgn
