[tool.poetry]
name = "explainable-chess-engine"
version = "0.1.0"
description = ""
authors = ["Antoine Déchappe <dechantoine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9,<3.13"
anytree = "^2.12.1"
loguru = "^0.7.2"
more-itertools = "^10.2.0"
numpy = "^2.0.0"
python-chess = "^1.999"
torch = "^2.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
snakeviz = "^2.2.0"

[tool.poetry.group.train]
optional = true

[tool.poetry.group.train.dependencies]
multichoice = "^0.3.5"
pandas = "^2.1.4"
protobuf = "4.25.3"
pyarrow = "^17.0.0"
pympler = "^1.0.1"
scikit-learn = "^1.4.2"
seaborn = "^0.13.2"
stockfish = "^3.28.0"
tensorflow-io = "^0.37.1"
tensorboard = "^2.17.1"
tensorflow = "^2.17.0"
tqdm = "^4.66.1"

[tool.poetry.group.hf-publish]
optional = true

[tool.poetry.group.hf-publish.dependencies]
huggingface-hub = "^0.23.3"

[tool.poetry.group.hf-space]
optional = true

[tool.poetry.group.hf-space.dependencies]
anytree = "^2.12.1"
torch = "^2.1.2"
pandas = "^2.1.4"
python-chess = "^1.999"
graphviz = "^0.20.3"
gradio = "^4.36.0"
more-itertools = "^10.2.0"
loguru = "^0.7.2"
cairosvg = "^2.7.1"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = {version = "^0.115", extras = ["standard"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=test/test_pgn_dataset.py",
]
log_cli = true
log_cli_level = 'INFO'
